--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Badger Modal Demo</title>
-  <link rel="stylesheet" href="./badger-modal.css">
+  <link rel="stylesheet" href="./dist/badger-modal.css">
   <link rel="stylesheet" href="./app.css">
 </head>
 <body>
@@ -66,7 +66,7 @@
     </div>
   </div>
 
-  <script src="./badger-modal.js"></script>
+  <script src="./dist/badger-modal.js"></script>
   <script>
     (() => {
       const toggleEls = document.querySelectorAll('[data-modal-target]');
