--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         const modalEl = document.querySelector(modalTarget);
 
         if (modalEl) {
-          const modal = new Modal(modalEl);
+          const modal = new BModal(modalEl);
 
           el.addEventListener('click', e => {
             e.preventDefault();
