Change pages workflow

--- a/index.html
+++ b/index.html
@@ -11,23 +11,15 @@
 <body>
   <h2>Default Test Modal</h2>
   <button type="button" data-modal-target="#exampleModal">Open Example Modal</button>
-  <div
-    class="bm-modal"
-    id="exampleModal"
-    tabindex="-1"
-    aria-hidden="true"
-    aria-labelledby="exampleModalTitle"
-  >
+  <div class="bm-modal" id="exampleModal" tabindex="-1" aria-hidden="true" aria-labelledby="exampleModalTitle">
     <div class="bm-dialog">
       <div class="bm-content">
         <div class="bm-header">
           <button type="button" class="bm-close" data-modal-dismiss aria-label="Close">Close</button>
         </div>
-        <div class="text-center bm-body">
+        <div class="bm-body">
           <div class="bm-title" id="exampleModalTitle">Modal Title</div>
-          <div class="bm-text">
-            <p>Modal Text</p>
-          </div>
+          <div class="bm-text">Modal Text</div>
           <div class="bm-btns">
             <button type="button" data-modal-dismiss>Close</button>
           </div>
@@ -41,23 +33,15 @@
 
   <h2>Centered Test Modal</h2>
   <button type="button" data-modal-target="#exampleModal2">Open Example Modal</button>
-  <div
-    class="bm-modal"
-    id="exampleModal2"
-    tabindex="-1"
-    aria-hidden="true"
-    aria-labelledby="exampleModal2Title"
-  >
+  <div class="bm-modal" id="exampleModal2" tabindex="-1" aria-hidden="true" aria-labelledby="exampleModal2Title">
     <div class="bm-dialog bm-dialog--centered">
       <div class="bm-content">
         <div class="bm-header">
           <button type="button" class="bm-close" data-modal-dismiss aria-label="Close">Close</button>
         </div>
-        <div class="text-center bm-body">
+        <div class="bm-body">
           <div class="bm-title" id="exampleModal2Title">Modal Title</div>
-          <div class="bm-text">
-            <p>Modal Text</p>
-          </div>
+          <div class="bm-text">Modal Text</div>
           <div class="bm-btns">
             <button type="button" data-modal-dismiss>Close</button>
           </div>
